# mfw2

./: .gitmodules  CMakeLists.txt  README.md
libmonadic/: CMakeLists.txt  main.cc
libmonadic/cmake/: FindZMQ.cmake
libmonadic/include/: abstractfactory.h  guid.h  identifiable.h  impl1.h  interface.h  kernelmanager.h  link.h  metadata.h  metaobject.h  monadic.h  node.h  objectfield.h  objectproperty.h  pin.h  pluginmanager.h  scriptednode.h  singleton.h  subnetwork.h  zmqpin.h
libmonadic/include/components/: paramnode.h
libmonadic/include/core/: bipbuffer.h  component.h  connection.h  core.h  link.h  network.h  node.h  objectblob.h  packet.h  pin.h  port.h  spinlock.h  timeref.h
libmonadic/include/nodes/: paramnode.h
libmonadic/include/objects/: object.h  objectblob.h  objects.h
libmonadic/include/objects/basic/: basic.h  boolean.h  number.h  string.h  tensor.h
libmonadic/include/script/: script.h  scriptednode.h
libmonadic/include/serialization/: binaryserializable.h
libmonadic/include/system/: filesystem.h  system.h
libmonadic/src/: guid.cc  interface.cc  monadic.cc  network.cc  node.cc  scriptednode.cc  scriptednode.h  zmqpin.cc
libmonadic/src/core/: bipbuffer.cc  component.cc  connection.cc  link.cc  network.cc  node.cc  packet.cc  pin.cc  port.cc
libmonadic/src/nodes/: paramnode.cc
libmonadic/src/objects/: object.cc  objectblob.cc
libmonadic/src/objects/basic/: number.cc
libmonadic/src/script/: scriptednode.cc
test/: CMakeLists.txt  binaryserialization_test.cc  comm_test.cc  core_test.cc  test.cc
